@@ -25,7 +25,7 @@
 
 ;;; Commentary:
 
-;; A smart editing mode for m4 macro definitions.  It seems to have most of the 
+;; A smart editing mode for m4 macro definitions.  It seems to have most of the
 ;; syntax right (sexp motion commands work, but function motion commands don't).
 ;; It also sets the font-lock syntax stuff for colorization
 
@@ -46,8 +46,8 @@
   :prefix "m4-"
   :group 'languages)
 
-(defcustom m4-program 
-  (cond 
+(defcustom m4-program
+  (cond
    ((file-exists-p "/usr/local/bin/m4") "/usr/local/bin/m4")
    ((file-exists-p "/usr/bin/m4") "/usr/bin/m4")
    ((file-exists-p "/bin/m4") "/bin/m4")
@@ -77,9 +77,8 @@
     ("\\\$\\\@" . font-lock-variable-name-face)
     ("\\\$\\\*" . font-lock-variable-name-face)
     ("\\b\\(builtin\\|change\\(com\\|quote\\|word\\)\\|d\\(e\\(bug\\(file\\|mode\\)\\|cr\\|f\\(ine\\|n\\)\\)\\|iv\\(ert\\|num\\)\\|nl\\|umpdef\\)\\|e\\(rrprint\\|syscmd\\|val\\)\\|f\\(ile\\|ormat\\)\\|gnu\\|i\\(f\\(def\\|else\\)\\|n\\(c\\(lude\\|r\\)\\|d\\(ex\\|ir\\)\\)\\)\\|l\\(en\\|ine\\)\\|m\\(4\\(exit\\|wrap\\)\\|aketemp\\)\\|p\\(atsubst\\|opdef\\|ushdef\\)\\|regexp\\|s\\(hift\\|include\\|ubstr\\|ys\\(cmd\\|val\\)\\)\\|tra\\(ceo\\(ff\\|n\\)\\|nslit\\)\\|un\\(d\\(efine\\|ivert\\)\\|ix\\)\\)\\b" . font-lock-keyword-face)
-    ("\\b\\(m4_\\(builtin\\|change\\(com\\|quote\\|word\\)\\|d\\(e\\(bug\\(file\\|mode\\)\\|cr\\|f\\(ine\\|n\\)\\)\\|iv\\(ert\\|num\\)\\|nl\\|umpdef\\)\\|e\\(rrprint\\|syscmd\\|val\\)\\|f\\(ile\\|ormat\\)\\|i\\(f\\(def\\|else\\)\\|n\\(c\\(lude\\|r\\)\\|d\\(ex\\|ir\\)\\)\\)\\|l\\(en\\|ine\\)\\|m\\(4\\(_undefine\\|exit\\|wrap\\)\\|aketemp\\)\\|p\\(atsubst\\|opdef\\|ushdef\\)\\|regexp\\|s\\(hift\\|include\\|ubstr\\|ys\\(cmd\\|val\\)\\)\\|tra\\(ceo\\(ff\\|n\\)\\|nslit\\)\\|undivert\\)\\)\\b" . font-lock-keyword-face)
-    "Default font-lock-keywords for m4 mode.")
-)
+    ("\\b\\(m4_\\(builtin\\|change\\(com\\|quote\\|word\\)\\|d\\(e\\(bug\\(file\\|mode\\)\\|cr\\|f\\(ine\\|n\\)\\)\\|iv\\(ert\\|num\\)\\|nl\\|umpdef\\)\\|e\\(rrprint\\|syscmd\\|val\\)\\|f\\(ile\\|ormat\\)\\|i\\(f\\(def\\|else\\)\\|n\\(c\\(lude\\|r\\)\\|d\\(ex\\|ir\\)\\)\\)\\|l\\(en\\|ine\\)\\|m\\(4\\(_undefine\\|exit\\|wrap\\)\\|aketemp\\)\\|p\\(atsubst\\|opdef\\|ushdef\\)\\|regexp\\|s\\(hift\\|include\\|ubstr\\|ys\\(cmd\\|val\\)\\)\\|tra\\(ceo\\(ff\\|n\\)\\|nslit\\)\\|undivert\\)\\)\\b" . font-lock-keyword-face))
+  "Default font-lock-keywords for `m4 mode'.")
 
 (defcustom m4-mode-hook nil
   "*Hook called by `m4-mode'."
@@ -88,7 +87,7 @@
 
 ;;this may still need some work
 (defvar m4-mode-syntax-table nil
-  "syntax table used in m4 mode")
+  "Syntax table used while in `m4-mode'.")
 (setq m4-mode-syntax-table (make-syntax-table))
 (modify-syntax-entry ?` "('" m4-mode-syntax-table)
 (modify-syntax-entry ?' ")`" m4-mode-syntax-table)
@@ -109,20 +108,20 @@
     map))
 
 (defvar m4-mode-abbrev-table nil
-  "Abbrev table used while in text mode.")
+  "Abbrev table used while in `m4-mode'.")
 
 (unless m4-mode-abbrev-table
   (define-abbrev-table 'm4-mode-abbrev-table ()))
 
 (defun m4-m4-buffer ()
-  "send contents of the current buffer to m4"
+  "Send contents of the current buffer to m4."
   (interactive)
   (shell-command-on-region (point-min) (point-max) m4-program "*m4-output*"
 			   nil)
   (switch-to-buffer-other-window "*m4-output*"))
 
 (defun m4-m4-region ()
-  "send contents of the current region to m4"
+  "Send contents of the current region to m4."
   (interactive)
   (shell-command-on-region (point) (mark) m4-program "*m4-output*" nil)
   (switch-to-buffer-other-window "*m4-output*"))
@@ -142,7 +141,7 @@
   (setq parse-sexp-ignore-comments t)
   (setq local-abbrev-table m4-mode-abbrev-table)
 
-  (make-local-variable	'font-lock-defaults)  
+  (make-local-variable	'font-lock-defaults)
   (setq major-mode 'm4-mode
 	mode-name "m4"
 	font-lock-defaults '(m4-font-lock-keywords nil)
